--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
 	"name": "@map-colonies/mc-logger",
-	"version": "1.0.11",
+	"version": "1.1.0",
 	"description": "Map-Colonies Logger",
+	"homepage": "https://github.com/MapColonies/mc-logger#readme",
+	"bugs": {
+    "url": "https://github.com/MapColonies/mc-logger/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MapColonies/mc-logger.git"
+  },
 	"main": "logger.js",
 	"types": "index.d.ts",
 	"scripts": {
@@ -11,6 +19,6 @@
 	"license": "ISC",
 	"dependencies": {
 		"opentracing": "^0.14.1",
-		"winston": "^2.1.1"
+		"winston": "^2.4.5"
 	}
 }
