chore(work-standard): added work-standard configs

--- a/package.json
+++ b/package.json
@@ -1,24 +1,51 @@
 {
-	"name": "@map-colonies/mc-logger",
-	"version": "1.1.0",
-	"description": "Map-Colonies Logger",
-	"homepage": "https://github.com/MapColonies/mc-logger#readme",
-	"bugs": {
+  "name": "@map-colonies/mc-logger",
+  "version": "1.1.0",
+  "description": "Map-Colonies Logger",
+  "homepage": "https://github.com/MapColonies/mc-logger#readme",
+  "bugs": {
     "url": "https://github.com/MapColonies/mc-logger/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/MapColonies/mc-logger.git"
   },
-	"main": "logger.js",
-	"types": "index.d.ts",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Map-Colonies inc",
-	"license": "ISC",
-	"dependencies": {
-		"opentracing": "^0.14.1",
-		"winston": "^2.4.5"
-	}
+  "main": "logger.js",
+  "types": "index.d.ts",
+  "scripts": {
+    "lint": "eslint ./**/*.js",
+    "lint:fix": "eslint --fix ./**/*.js",
+    "release": "standard-version"
+  },
+  "author": "Map-Colonies inc",
+  "license": "ISC",
+  "dependencies": {
+    "opentracing": "^0.14.1",
+    "winston": "^2.4.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.1",
+    "commitlint": "^9.1.0",
+    "cz-conventional-changelog": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "nyc": "^15.1.0",
+    "standard-version": "^8.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
