style: fix style by eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "standard",
-  "plugins": ["import", "node", "promise", "standard"],
+  "plugins": ["import", "node", "promise", "standard", "markdown"],
   "env": {
     "node": true
   },
