--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-markdown": "^1.0.2",
     "husky": "^4.2.5",
     "nyc": "^15.1.0",
     "standard-version": "^8.0.2"
