--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "ecmaVersion": 8,
     "sourceType": "module"
   },
+  "parser": "babel-eslint",
   "rules": {
     "eol-last": "off",
     "space-before-function-paren": "off",
