--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
+    "babel-eslint": "^10.1.0",
     "commitlint": "^9.1.0",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-markdown": "^1.0.2",
     "husky": "^4.2.5",
     "nyc": "^15.1.0",
     "standard-version": "^8.0.2"
